--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vercel/postgres": "^0.10.0",
+    "dotenv": "^16.4.7",
     "next": "15.1.4",
     "pg": "^8.13.1",
     "react": "^19.0.0",
